Nộp bài tập JS buổi 7

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="card">
         <div class="container">
-            <h5 class="card-title">TỔNG CÁC SỐ DƯƠNG TRONG MẢNG</h5>
+            <h5 class="card-title text-center">TỔNG CÁC SỐ DƯƠNG TRONG MẢNG</h5>
             <div class="card-body">
                 <div class="row">
                     <div class="col-6">
@@ -24,7 +24,7 @@
                             <input id="inputMang" class="form-control" type="text" name="">
                         </div>
                         <div class="form-group">
-                            <label style="color: red;">***Nếu là người dùng họ chỉ biết vị trí bắt đầu từ 1~n chứ không biết vị trí thứ tự bắt đầu từ 0~n của mảng ***</label>
+                            <label style="color: red;">***Nếu là người dùng họ chỉ biết vị trí bắt đầu từ 1~n chứ không biết vị trí thứ tự bắt đầu từ 0~n của mảng ^^ ***</label>
                             <label for="my-input">Nhập vị trí số 1</label>
                             <input id="inputViTri1" class="form-control" type="text" name="">
                         </div>
